--- a/templates/LibraryManagement/AddStudent.html
+++ b/templates/LibraryManagement/AddStudent.html
@@ -1,28 +1,31 @@
 {% extends 'LibraryManagement/Base.html' %}
 
 {% block title %}
-    <title>Add Student</title>
+    <title>Create an Account</title>
 {% endblock %}
 
 {% block body %}
-
-        <div class = "row justify-content-center">
-            <div class = "col-lg-9 ">
-                <div class="card border-secondary mb-3">
-                    <div class="card-header">Add Student</div>
-                    <div class="card-body text-secondary">
-                        <h5 class="card-title"> </h5>
-                        <form action="{% url 'AddStudent' %}" method="post" enctype="multipart/form-data">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        Login
+                    </div>
+                    <div class="card-body col-md-8">
+                        <h1>Register</h1>
+                        <form action='{% url 'register' %}' method="post">
                             {% csrf_token %}
-                            {{ form.as_div}}
-                            <br>
-                            <button class = "btn btn-primary" type="submit"><i class="fa-solid fa-pen-to-square"></i> Save </button>
+                            {{ form.as_p }}
+                            <input type="submit" value="Register">
                         </form>
+                        <br>
+                        <button><a href="{% url 'showBooks' %}">Go back</a></button>
                     </div>
                 </div>
-                <a href="{% url 'showBooks' %}" class="btn btn-warning"> <i class="fa-solid fa-eye"></i> <strong> Go Back </strong> </a>
-
             </div>
         </div>
+    </div>
 {% endblock %}
+
 
