--- a/templates/LibraryManagement/AddBook.html
+++ b/templates/LibraryManagement/AddBook.html
@@ -20,7 +20,7 @@
                         </form>
                     </div>
                 </div>
-                <a href="{% url 'showBooks' %}" class="btn btn-warning"> <i class="fa-solid fa-eye"></i> <strong> View Prompts </strong> </a>
+                <a href="{% url 'showBooks' %}" class="btn btn-warning"> <i class="fa-solid fa-eye"></i> <strong> Back to Books </strong> </a>
             </div>
         </div>
 {% endblock %}
