--- a/templates/LibraryManagement/AssignBook.html
+++ b/templates/LibraryManagement/AssignBook.html
@@ -1,7 +1,7 @@
 {% extends 'LibraryManagement/Base.html' %}
 
 {% block title %}
-    <title>Add Book</title>
+    <title>Assign Book</title>
 {% endblock %}
 
 {% block body %}
