--- a/templates/LibraryManagement/register.html
+++ b/templates/LibraryManagement/register.html
@@ -10,7 +10,6 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
-                        Login
                     </div>
                     <div class="card-body col-md-8">
                         <h1>Register</h1>
@@ -20,7 +19,7 @@
                             <input type="submit" value="Register">
                         </form>
                         <br>
-                        <button><a href="{% url 'showBooks' %}">Go back</a></button>
+                        <button><a href="{% url 'login' %}">Go back</a></button>
                     </div>
                 </div>
             </div>
