--- a/templates/LibraryManagement/ShowBooks.html
+++ b/templates/LibraryManagement/ShowBooks.html
@@ -77,7 +77,7 @@
 
                 <td>
                     {% if book.rented %}
-                        <button class="btn btn-outline-primary mt-1"><a href="{% url 'issue'  book.id 1%}" class="update-icon">
+                        <button onclick="popup()" class="btn btn-outline-primary mt-1"><a href="{% url 'issue'  book.id 1%}" class="update-icon">
                         <i class="fa-solid fa-arrow-right-arrow-left"></i>
                     </a></button>
                     {% else %}
@@ -112,12 +112,9 @@
     <br>
     <br>
     <br>
-
-<button class="trigger">Click here to trigger the modal!</button>
-<div class="modal">
-    <div class="modal-content">
-        <span class="close-button">×</span>
-        <h1>Hello, I am a modal!</h1>
-    </div>
-</div>
+<script>
+function popup() {
+  alert("You have returned the book");
+}
+</script>
 {% endblock %}
