--- a/templates/LibraryManagement/updateBook.html
+++ b/templates/LibraryManagement/updateBook.html
@@ -18,13 +18,17 @@
                         {% csrf_token %}
                         {{ form.as_div }}
                         <br>
-                        <button class = "btn btn-primary" type="submit"><i class="fa-solid fa-pen-to-square"></i> Update</button>
+                        <button onclick="popup()" class = "btn btn-primary" type="submit"><i class="fa-solid fa-pen-to-square"></i> Update</button>
                     </form>
                 </div>
             </div>
             <a href="{% url 'showBooks' %}" class="btn btn-warning"> <i class="fa-solid fa-arrow-left-long"></i> <strong> Go Back </strong></a>
         </div>
     </div>
-
+<script>
+function popup() {
+  alert("The book has been updated");
+}
+</script>
 {% endblock %}
 
